--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-           <title>Shinee and Your Number</title>
-    </head>
-    <body>
-        <h1>dO YOU like Shinee?</h1>
-        <p>This is a paragrahpy about Shinee.Their music will always be legendary</p>
+	<head>
+		<title>Amaya Sutton</title>
+		<style>
+			/*
+				selector {
+					property: value;
+				}
+			*/
+
+			body{
+				background-color: pink;
+				color: white;
+				font-size: large; 
+				font-family:"Comic Sans MS", cursive, sans-serif;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>Welcome to Amaya Sutton's Website</h1>
+		<p>Amaya Sutton is a sutdent at CUNY BMCC in New york City.She studies Animation and motion graphics.One day she wants to pursue in the graphic and design.CGI and special effects are her biggests intrests.Typography is one of her recent intrests.She grew up in Durham,North Carolina and moved to new york at 10.Her favorite moves are harry potter and crazy rich Asians.</p>
 	</body>
 </html>
