--- a/final/index.html
+++ b/final/index.html
@@ -18,7 +18,7 @@
 	</nav>
 
 <h1>Student Help</h1>
-<p>This site is here to provide studetns with resources to help them succed in college.Many studetns in college may not know the recourses that are availble to them.It is often hard to know where to start when you need.Here are some links below proivded for college students</p>
+<p>This site is here to provide studetns with resources and information to help them succed in college.It also will include a sumary of thr struggles students face during the semster.Many studetns in college may not know the recourses that are available to them.It is often hard to know where to start when you need.Here are some links below proivded for college students</p>
 
 </body>
 
