--- a/final/struggles.html
+++ b/final/struggles.html
@@ -18,7 +18,7 @@
 	</nav>
 
 <h1>Student Help</h1>
-<p>There are any struggle that </p>
+<p>There are many struggles that college students face.They can face struggles like,finaicla issues,grades,mental health issues and many more.It is important for students to know that they are not alone.There are always recources like advisment aoffices and counsler centers.College can be a very stressful time and it's crucial for a student to know how to help themselves.</p>
 
 </body>
 
