--- a/final/index.html
+++ b/final/index.html
@@ -17,7 +17,7 @@
 		</ul>
 	</nav>
 
-<h1>Student Help</h1>
+<h1>Help Your Education</h1>
 <p>This site is here to provide students with resources and information to help them succed in college.It also will include a sumary of thr struggles students face during the semster.Many studetns in college may not know the recourses that are available to them.It is often hard to know where to start when you need.Here are some links below proivded for college students</p>
 <video width="500" height="400" autoplay>
   <source src="video2.mp4" type="video/mp4">
