--- a/final/struggles.html
+++ b/final/struggles.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="index.html">home</a></li>
 			<li><a href="struggles.html">struggles of students</a></li>
-			<li><a href="https://github.com/amayass/MMP100_F18/blob/master/final/Resources.html">Recources</a></li>
+			<li><a href="Resources.html">Recources</a></li>
 		</ul>
 	</nav>
 
